JT-4946 Add spacing to tab modules and fix text-wrapping issue

--- a/app/assets/stylesheets/school_profiles/_profile_module.scss
+++ b/app/assets/stylesheets/school_profiles/_profile_module.scss
@@ -111,6 +111,7 @@
     .tab-container {
       display: inline-block;
       margin: 0px 0px 10px;
+      line-height: 2.2;
       .tab-title {
         font-family: opensans-semibold;
         font-size: 12px;
@@ -121,6 +122,7 @@
         text-decoration: none;
         text-align: center;
         border-radius: 2px;
+        display: inline-block;
 
         &.tab-selected {
           background: #fff;
